# naminukas-brain

./: .travis.yml  CMakeLists.txt  CPPLINT.cfg  Procfile  README.md
.github/workflows/: main.yml
model/: servo-bracket.stl  suction-cup-connector.stl
pru_firmware/: README.md  am335x-pru0-fport-fw  am335x-pru0-sbus-fw  fport.pru0.c  sbus.pru0.c
src/: BeagleBoneBlueIMU.cpp  BeagleBoneBlueIMU.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Client.cpp  Client.hpp  Dynamixel.cpp  Dynamixel.hpp  DynamixelKinematics.cpp  DynamixelKinematics.hpp  DynamixelUtil.cpp  DynamixelUtil.hpp  Hardware.cpp  Hardware.hpp  HardwareBeagleBoneBlue.cpp  HardwareBeagleBoneBlue.hpp  IMU.hpp  IOServer.cpp  IOServer.hpp  Locomotion.cpp  Locomotion.hpp  LocomotionIdle.cpp  LocomotionIdle.hpp  LocomotionPole.cpp  LocomotionPole.hpp  LocomotionPoleGestures.cpp  LocomotionPoleGestures.hpp  LocomotionSegway.cpp  LocomotionSegway.hpp  LocomotionSki.cpp  LocomotionSki.hpp  LocomotionUnicycle.cpp  LocomotionUnicycle.hpp  Logger.cpp  Logger.hpp  Message.cpp  Message.hpp  MessageHandler.cpp  MessageHandler.hpp  (+19 more)
src/action/: Action.cpp  Action.hpp  ActionRotate.cpp  ActionRotate.hpp  ActionSequential.cpp  ActionSequential.hpp
src/geom/: Orientation.cpp  Orientation.hpp  Point3D.cpp  Point3D.hpp  Pose.hpp
src/impl/: RCRadio_PRU.cpp  RCRadio_PRU.hpp  RCRadio_PRU_SBUS.cpp  RCRadio_PRU_SBUS.hpp
src/locomotion/: Locomotion.cpp  Locomotion.hpp  LocomotionCaterpillar.cpp  LocomotionCaterpillar.hpp  LocomotionGallop.cpp  LocomotionGallop.hpp  LocomotionHang.cpp  LocomotionHang.hpp  LocomotionIdle.cpp  LocomotionIdle.hpp  LocomotionPole.cpp  LocomotionPole.hpp  LocomotionPoleGestures.cpp  LocomotionPoleGestures.hpp  LocomotionSegway.cpp  LocomotionSegway.hpp  LocomotionSki.cpp  LocomotionSki.hpp  LocomotionTail.cpp  LocomotionTail.hpp  LocomotionUnicycle.cpp  LocomotionUnicycle.hpp  LocomotionWaddle.cpp  LocomotionWaddle.hpp  TraitTilting.cpp  TraitTilting.hpp
test/: ActionSequential.cpp  Message.cpp  main.cpp
